deleted date from mock server data, right align total transaction amount, edge scroll animate issue

--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
@@ -46,6 +46,14 @@
     margin: 0 5px;
   }
 
+  .transactions__total-amount {
+    padding-right: 1em;
+  }
+
+  .transactions__total-amount-val {
+    padding-right: 7em;
+  }
+
   .transactions__total-amount > i {
     color: #112E51;
     padding-left: 3px;
